[package]
name = "unlocker-wasm"
version = "0.0.0"
authors = [ "@RisaSoftStaking",]
edition = "2018"
publish = false


[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.unlocker]
features = [ "wasm-output-mode",]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.21.2"

[dependencies.elrond-wasm-output]
version = "0.21.2"
features = ["wasm-output-mode"]

[workspace]
members = ["."]